force-app/main/default/objects/Lead/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name the Lead is associated with, for existing Accounts</description>
    <inlineHelpText>Account Name the Lead is associated with, for existing Accounts</inlineHelpText>
    <label>DEPRECATE Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account Name)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>