force-app/main/default/objects/Lead/fields/Accounting_Platform__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Platform__c</fullName>
    <description>What accounting Platform they are using</description>
    <label>Accounting Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>