force-app/main/default/objects/Lead/fields/Activity_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Activity_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read-only field to indicate that an activity has been recorded against the lead</description>
    <label>Activity Recorded</label>
    <type>Checkbox</type>
</CustomField>