force-app/main/default/objects/Lead/fields/Authorized_Signer_Company__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signer_Company__c</fullName>
    <inlineHelpText>Company that is registering this lead</inlineHelpText>
    <label>Authorized Signer Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>