force-app/main/default/objects/Lead/fields/Authorized_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signer_Name__c</fullName>
    <inlineHelpText>Name of the person who entered the lead</inlineHelpText>
    <label>Authorized Signer Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>