force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Answer the question &quot;What is your budget?&quot;</description>
    <label>Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>