force-app/main/default/objects/Lead/fields/Cloud_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Partner_ID__c</fullName>
    <inlineHelpText>This could be a cloud partner ID or Desktop partner ID.  Most should have a corresponding partner name in ERP if you need to look it up.</inlineHelpText>
    <label>Partner ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>