force-app/main/default/objects/Lead/fields/Cloud_Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Subscription_Status__c</fullName>
    <inlineHelpText>Data should come directly from Cloud/Chargify in all leads.  It&apos;s based on actual status in Cloud.  You should not have to change this field...</inlineHelpText>
    <label>Cloud Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Assessing</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Cancel Initiated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Failed To Create</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Trial Ended</fullName>
            </value>
            <value>
                <fullName>Trialing</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>