force-app/main/default/objects/Lead/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <inlineHelpText>Original Customer Class - Taken from ERP systemb</inlineHelpText>
    <label>Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beta SB</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>End GP Tax Exempt</fullName>
            </value>
            <value>
                <fullName>End User Cloud</fullName>
            </value>
            <value>
                <fullName>End User GP</fullName>
            </value>
            <value>
                <fullName>End user QB</fullName>
            </value>
            <value>
                <fullName>Ex end user 7th</fullName>
            </value>
            <value>
                <fullName>Ex end user GP</fullName>
            </value>
            <value>
                <fullName>Ex end user QB</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Lead 7th</fullName>
            </value>
            <value>
                <fullName>Lead AX</fullName>
            </value>
            <value>
                <fullName>Lead GP</fullName>
            </value>
            <value>
                <fullName>Lead QB</fullName>
            </value>
            <value>
                <fullName>Lead Solomoan</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>VAR 7th</fullName>
            </value>
            <value>
                <fullName>VAR Dead</fullName>
            </value>
            <value>
                <fullName>VAR National</fullName>
            </value>
            <value>
                <fullName>VAR QB</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>