force-app/main/default/objects/Lead/fields/Days_took_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Days_took_to_Convert__c</fullName>
    <formula>ConvertedDate - datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days took to Convert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>