force-app/main/default/objects/Lead/fields/Discover_Held__c.field-meta.xml
<CustomField>
    <fullName>Discover_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Held</label>
    <type>Checkbox</type>
</CustomField>