force-app/main/default/objects/Lead/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <description>Date the discovery call is scheduled for</description>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>