force-app/main/default/objects/Lead/fields/ERP_Reseller_of_Record__c.field-meta.xml
<CustomField>
    <fullName>ERP_Reseller_of_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Reseller of Record</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (ERP Reseller of Record)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>