force-app/main/default/objects/Lead/fields/GP_Partner__c.field-meta.xml
<CustomField>
    <fullName>GP_Partner__c</fullName>
    <label>GP Partner</label>
    <length>55</length>
    <type>Text</type>
</CustomField>