force-app/main/default/objects/Lead/fields/GSP_LeadDash__Opp_From_Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>GSP_LeadDash__Opp_From_Converted_Lead__c</fullName>
    <label>Opp From Converted Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#0B6FCE</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>