force-app/main/default/objects/Lead/fields/Hubspot_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Lifecycle_Stage__c</fullName>
    <inlineHelpText>Dictates email nurturing by the marketing dept.  Maps back to Hubspot</inlineHelpText>
    <label>Hubspot Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Accepted Lead</fullName>
            </value>
            <value>
                <fullName>Partner Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Value Aware</fullName>
            </value>
            <value>
                <fullName>Technically Aware</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Align</fullName>
            </value>
            <value>
                <fullName>Prove</fullName>
            </value>
            <value>
                <fullName>Kick Off</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>