force-app/main/default/objects/Lead/fields/Is_Org_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Org_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this person is the org owner, the person who originally set up the account and therefore has the billing info and gets most of the in app messaging and emails throughout the trial.  Primary contact.</inlineHelpText>
    <label>Is Org Owner</label>
    <type>Checkbox</type>
</CustomField>