force-app/main/default/objects/Lead/fields/Key_Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Makers__c</fullName>
    <description>Answers the question &quot;Who are the key decision makers on your team?&quot;</description>
    <label>Authority</label>
    <type>TextArea</type>
</CustomField>