force-app/main/default/objects/Lead/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <description>Power of 1</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>