force-app/main/default/objects/Lead/fields/Lead_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Lead_Outcome__c</fullName>
    <label>Lead Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Rejected_Recycle</fullName>
                <label>Rejected - Recycle</label>
            </value>
            <value>
                <fullName>Rejected_Disqualified</fullName>
                <label>Rejected - Disqualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>