force-app/main/default/objects/Lead/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <label>Lead Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>