force-app/main/default/objects/Lead/fields/Lead_Sub_Source_Backup__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source_Backup__c</fullName>
    <label>Lead Subsource Backup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>