force-app/main/default/objects/Lead/fields/Lead_Sub_Source_Backup_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source_Backup_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Subsource Backup Completed</label>
    <type>Checkbox</type>
</CustomField>