force-app/main/default/objects/Lead/fields/Lead_Subsource__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subsource__c</fullName>
    <label>Lead Subsource</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Subsource</valueSetName>
    </valueSet>
</CustomField>