force-app/main/default/objects/Lead/fields/Mass_Upload__c.field-meta.xml
<CustomField>
    <fullName>Mass_Upload__c</fullName>
    <label>Mass Upload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDM Digital Summit Leads_07072021</fullName>
            </value>
            <value>
                <fullName>Summit Leads_10192021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>