force-app/main/default/objects/Lead/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <label>Notes &amp; Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>