force-app/main/default/objects/Lead/fields/Number_of_SKUs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SKUs__c</fullName>
    <label>Number of SKUs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 100</fullName>
            </value>
            <value>
                <fullName>101 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 999</fullName>
            </value>
            <value>
                <fullName>1,000 - 4,999</fullName>
            </value>
            <value>
                <fullName>&gt; 5,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>