force-app/main/default/objects/Lead/fields/Org_Name_or_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Org_Name_or_Parent_Account__c</fullName>
    <inlineHelpText>If this field has a name in it that is different from the Company Name, then you&apos;ll need to set up a two accounts.  The Org name is simply another account that you can relate to the Company account by using the &quot;parent account&quot; field in Salesforce.</inlineHelpText>
    <label>Org Name or Parent Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>