force-app/main/default/objects/Lead/fields/Owner_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Owner_Calendly_Link__c</fullName>
    <formula>Owner:User.Calendly_URL_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Calendly Link</label>
    <type>Text</type>
</CustomField>