force-app/main/default/objects/Lead/fields/Pardot_Last_Score_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Last_Score_Date_Only__c</fullName>
    <description>Displays the day the last pardot score occurred on. This field is only used in the Speed to Lead 2 process.</description>
    <label>Pardot Last Score Date Only</label>
    <type>Date</type>
</CustomField>