force-app/main/default/objects/Lead/fields/Partner_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Sourced</label>
    <type>Checkbox</type>
</CustomField>