force-app/main/default/objects/Lead/fields/Planned_Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Planned_Evaluations__c</fullName>
    <description>Answer the question &quot;How many solutions do you plan on evaluating?&quot;</description>
    <label># of Planned Evaluations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>