force-app/main/default/objects/Lead/fields/Portal_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_Lead_ID__c</fullName>
    <description>Unique lead ID generated by the partner portal</description>
    <externalId>true</externalId>
    <label>Portal Lead ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>