force-app/main/default/objects/Lead/fields/Previously_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Previously_Evaluated__c</fullName>
    <description>Answer the question &quot;What have you evaluated already?&quot;</description>
    <label>Previously Evaluated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>