force-app/main/default/objects/Lead/fields/Priority_Lead__c.field-meta.xml
<CustomField>
    <fullName>Priority_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Lead</label>
    <type>Checkbox</type>
</CustomField>