force-app/main/default/objects/Lead/fields/Product_Demo__c.field-meta.xml
<CustomField>
    <fullName>Product_Demo__c</fullName>
    <label>Product Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Demo</fullName>
            </value>
            <value>
                <fullName>BC Demo</fullName>
            </value>
            <value>
                <fullName>DC Demo</fullName>
            </value>
            <value>
                <fullName>SalesPad Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>