force-app/main/default/objects/Lead/fields/Product_Line_s__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_s__c</fullName>
    <inlineHelpText>Which SalesPad product are they interested in or using?</inlineHelpText>
    <label>Product Line(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Intelligence</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>SalesPad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>