force-app/main/default/objects/Lead/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <label>Rejection Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>