force-app/main/default/objects/Lead/fields/Return_to_Marketing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Marketing_Reason__c</fullName>
    <label>Return to Marketing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Not Willing to Change Accounting Platform</fullName>
            </value>
            <value>
                <fullName>Feature Missing</fullName>
            </value>
            <value>
                <fullName>Under Budget</fullName>
            </value>
            <value>
                <fullName>Too Small</fullName>
            </value>
            <value>
                <fullName>Not Yet Ready</fullName>
            </value>
            <value>
                <fullName>No Authority</fullName>
            </value>
            <value>
                <fullName>Found Alternate Contact</fullName>
            </value>
            <value>
                <fullName>Not a Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>