force-app/main/default/objects/Lead/fields/RFQ_Lead__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFQ Lead</label>
    <type>Checkbox</type>
</CustomField>