force-app/main/default/objects/Lead/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <description>For use with Round Robin Lead Assignment Rule</description>
    <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Round robin assignment for 2 reps; alternating after each lead</inlineHelpText>
    <label>Round Robin ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>