force-app/main/default/objects/Lead/fields/SAL_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Call_Scheduled_Date__c</fullName>
    <label>SAL Call Scheduled Date</label>
    <type>Date</type>
</CustomField>