force-app/main/default/objects/Lead/fields/Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume__c</fullName>
    <label>Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $1,000,000</fullName>
            </value>
            <value>
                <fullName>$1,000,001 - $5,000,000</fullName>
            </value>
            <value>
                <fullName>$5,000,001 - $10,000,000</fullName>
            </value>
            <value>
                <fullName>$10,000,001 - $50,000,000</fullName>
            </value>
            <value>
                <fullName>&gt; $50,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>