force-app/main/default/objects/Lead/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>