force-app/main/default/objects/Lead/fields/Selection_Process__c.field-meta.xml
<CustomField>
    <fullName>Selection_Process__c</fullName>
    <description>Answer the question &quot;What is your selection process?&quot;</description>
    <label>Selection Process</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>