force-app/main/default/objects/Lead/fields/SLA_Active__c.field-meta.xml
<CustomField>
    <fullName>SLA_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck prior to converting a lead to opportunity.</description>
    <label>SLA Active</label>
    <type>Checkbox</type>
</CustomField>