force-app/main/default/objects/Lead/fields/Software_Search_Reason__c.field-meta.xml
<CustomField>
    <fullName>Software_Search_Reason__c</fullName>
    <description>Answer the question &quot;Why are you looking for a new software solution at this time?&quot;</description>
    <label>Need</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>