force-app/main/default/objects/Lead/fields/SP_Reseller_of_Record__c.field-meta.xml
<CustomField>
    <fullName>SP_Reseller_of_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Reseller of Record</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Strategic Partner Account</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Reseller,Strategic Partner, Partner - Prospective, Partner - Reseller, Partner - Referral</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (SP Reseller of Record)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>