force-app/main/default/objects/Lead/fields/Speed_to_Lead_Notification_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Lead_Notification_Sent_Time__c</fullName>
    <description>Displays date and time first speed to lead notification is sent. This field is only used in the Speed to Lead 2 process.</description>
    <label>Speed to Lead Notification Sent Time</label>
    <type>DateTime</type>
</CustomField>