force-app/main/default/objects/Lead/fields/Tax_Automation__c.field-meta.xml
<CustomField>
    <fullName>Tax_Automation__c</fullName>
    <label>Tax Automation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Automation</valueSetName>
    </valueSet>
</CustomField>