force-app/main/default/objects/Lead/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <description>Answer the question &quot;What is your timeline?&quot;</description>
    <label>Timeline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>