force-app/main/default/objects/Lead/fields/UniqueEntry__ZI_Person_Has_Moved__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__ZI_Person_Has_Moved__c</fullName>
    <label>ZI Person Has Moved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>